  now a Fey::ORM::Role::Iterator role which all of these classes
  do. Based on a patch from Bryan Deeney and Will Weaver.

* The iterator methods all and all_as_hashes now really return _all_
  of the data, which means they will reset the iterator if needed.

- Added remaining and remaining_as_hashes methods to iterators. These
  do what all and all_as_hashes did previously. Thanks 


0.20   2009-02-06

- Use MooseX::Params::Validate instead of the no-longer-in-Fey
  Fey::Validate.


0.19   2009-01-18

- Added attribute metaclasses for attributes created based on columns
  (Fey::Meta::Attribute::FromColumn), and attributes based on an
  inflated column value (Fey::Meta::Attribute::FromInflator).

- When a column attribute with an inflator was written, the inflated
  value would stay the same, rather than reflecting the new raw value.

- Added Fey::ORM::Policy, which lets you set policies for column
  transforms and foreign key method naming.


0.18   2008-12-24

- The handling of caching iterators in 0.17 was still broken. It
  attempted to share the cached results between multiple objects as an
  optimization, but that ended up causing some very weird bugs. For
  now, we have a less efficient but correct version.


0.17   2008-12-24

- In previous release, a has_many method returned the same iterator
  each time it was called, which could cause confusing bugs. Now each
  call returns a new iterator. However, if the has_many relationship
  is cached, the new iterator will share a cache with any previously
  made iterator, preventing unnecessary trips to the DBMS.


0.16   2008-12-23

- A caching object iterator could cause an exception if you tried to
  call ->next() or ->all() on it after exhausting the underlying
  statement handle. This only happens with some drivers (DBD::Pg is
  one, DBD::SQLite is not). Reported by Edward Long.


0.15   2008-12-22

- There was a serious bug in 0.14 where all objects of a class shared